--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
+  background-image: url('./contemporary.jpg');
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%; 
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
